--- a/music/templates/music/details.html
+++ b/music/templates/music/details.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>{{ album.album_title }}</h1>
 
-</body>
-</html>
+
+{% for song in album.song_set.all %}
+    <h1>{{ song.song_title }}</h1>
+
+{% endfor %}
+
+
+
+
